[Feat] get plan in app change some data from string to float update docs
