# storage/api-docs/api-docs.json
@@ -17,32 +17,36 @@
             "post": {
                 "summary": "Authenticate user and generate JWT token",
                 "operationId": "c373bc4cffa4a56fc64e3979b8ee7b96",
-                "parameters": [
-                    {
-                        "name": "email",
-                        "in": "query",
-                        "description": "User's email",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "password",
-                        "in": "query",
-                        "description": "User's password",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
+                "requestBody": {
+                    "description": "User's credentials",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "email": {
+                                        "description": "User's email",
+                                        "type": "string"
+                                    },
+                                    "password": {
+                                        "description": "User's password",
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
                         }
                     }
-                ],
+                },
                 "responses": {
                     "200": {
                         "description": "Login successful"
                     },
                     "401": {
                         "description": "Invalid credentials"
+                    },
+                    "422": {
+                        "description": "Validation errors"
                     }
                 }
             }
@@ -125,27 +129,45 @@
                 }
             }
         },
-        "/reset-password": {
+        "/api/reset-password": {
             "post": {
                 "summary": "Reset the user's password",
-                "operationId": "3c793085ef8a11bc3209c9bc94792715",
-                "parameters": [
-                    {
-                        "name": "email",
-                        "in": "query",
-                        "description": "User's email",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
+                "operationId": "0b7c832607c45dd154c04fc63a847467",
+                "requestBody": {
+                    "description": "User's new password data",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "email": {
+                                        "description": "User's email",
+                                        "type": "string"
+                                    },
+                                    "password": {
+                                        "description": "User's new password",
+                                        "type": "string"
+                                    },
+                                    "password_confirmation": {
+                                        "description": "User's password confirmation",
+                                        "type": "string"
+                                    },
+                                    "token": {
+                                        "description": "Password reset token",
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
                         }
                     }
-                ],
+                },
                 "responses": {
                     "200": {
                         "description": "Password reset successfully"
                     },
                     "400": {
-                        "description": "Invalid request or token"
+                        "description": "Invalid token or email"
                     }
                 }
             }
